--- a/data/task-list-row.ui
+++ b/data/task-list-row.ui
@@ -8,7 +8,8 @@
       <object class="GtkBox" id="box4">
         <property name="visible">True</property>
         <property name="can_focus">False</property>
-        <property name="spacing">6</property>
+        <property name="spacing">12</property>
+        <property name="margin">12</property>
         <child>
           <object class="GtkCheckButton" id="done_check">
             <property name="visible">True</property>
