--- a/data/task-list-row.ui
+++ b/data/task-list-row.ui
@@ -17,6 +17,7 @@
             <property name="receives_default">False</property>
             <property name="xalign">0</property>
             <property name="draw_indicator">True</property>
+            <signal name="toggled" handler="hzl_task_list_row_done_toggled_cb" swapped="no"/>
           </object>
           <packing>
             <property name="expand">False</property>
@@ -44,17 +45,6 @@
             <property name="expand">False</property>
             <property name="fill">True</property>
             <property name="position">2</property>
-          </packing>
-        </child>
-        <child>
-          <object class="GtkImage" id="note_image">
-            <property name="can_focus">False</property>
-            <property name="icon_name">text-x-generic-symbolic</property>
-          </object>
-          <packing>
-            <property name="expand">False</property>
-            <property name="fill">True</property>
-            <property name="position">3</property>
           </packing>
         </child>
       </object>
